cluster/core/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: ingress-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  type: LoadBalancer
  externalTrafficPolicy: Local

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-ping
  namespace: ingress-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik
      protocol: TCP
      port: 8080
      targetPort: traefik
